[JIRA] TH2-648. Add more informative logs, and change logs levels.